// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`passwordless connection initPasswordless() calls initNS  with send:code when opts.passwordlessMethod is code 1`] = `
Array [
  null,
  Immutable.Map {
    "send": "code",
  },
]
`;

exports[`passwordless connection initPasswordless() calls initNS  with send:code when opts.passwordlessMethod is undefined 1`] = `
Array [
  null,
  Immutable.Map {
    "send": "code",
  },
]
`;

exports[`passwordless connection initPasswordless() calls initNS  with send:link when opts.passwordlessMethod is link 1`] = `
Array [
  null,
  Immutable.Map {
    "send": "link",
  },
]
`;

exports[`passwordless connection initPasswordless() should call webAPI.getUserCountry when there is no default location 1`] = `
Array [
  undefined,
  "location",
  Object {
    "recoverResult": "US",
    "successFn": [Function],
    "syncFn": [Function],
  },
]
`;

exports[`passwordless connection initPasswordless() should call webAPI.getUserCountry when there is no default location 2`] = `
Array [
  "id",
  "cb",
]
`;

exports[`passwordless connection initPasswordless() should call webAPI.getUserCountry when there is no default location 3`] = `
Array [
  "model",
  "en",
]
`;

exports[`passwordless connection initPasswordless() should load default location via options.defaultLocation 1`] = `
Array [
  undefined,
  "EN",
]
`;
